--- a/app/src/main/res/layout/nav_header_main_archwizard.xml
+++ b/app/src/main/res/layout/nav_header_main_archwizard.xml
@@ -22,7 +22,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AccelerationArchwizard"
+        android:text="iNsUrAnCe Sharksure"
         android:textSize="14sp"
         android:textColor="#FFF"
         android:textStyle="bold"
@@ -36,7 +36,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Physics Monitor"
+        android:text="Smart Insurance Monitor"
         android:id="@+id/subtitle"
         android:gravity="left"
         android:layout_marginBottom="8dp"
